[package]
name = "rust-ds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dslib"
path = "src/lib.rs"

[[bin]]
name = "stack"
path = "src/bin/stack.rs"

[[bin]]
name = "client"
path = "src/bin/main.rs"

[[bin]]
name = "queue"
path = "src/bin/queue.rs"

[dependencies]
